CTT_Package/objects/ACN_Call_Flow_Screen__c.object
<CustomObject>
    <fields>
        <fullName>ACN_Call_Flow_Template__c</fullName>
        <label>Call Flow Template</label>
        <referenceTo>ACN_Call_Flow_Template__c</referenceTo>
        <relationshipLabel>Call Flow Screen</relationshipLabel>
        <relationshipName>Call_Flow_Screen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACN_Default_Action_Screen__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Action - Screen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_Default_Questions__c</fullName>
        <description>Specify which all questions to  be loaded on screen load.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Questions</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_External_Ref__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Ref.</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACN_Layout_Column__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Layout Column Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACN_Screen_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Screen Logic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Screen_Number__c</fullName>
        <displayFormat>SN-{000000}</displayFormat>
        <label>Screen Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ACN_Show_Serial_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Serial No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_Stage_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_Stage_Sequence_No__c</fullName>
        <label>Stage Sequence No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACN_hasBranching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Branching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_isEndScreen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_isStartScreen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Next__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Hide the Next button for Compound Screen</description>
        <inlineHelpText>Check this field, Only if you do not want &quot;Next&quot; button in your Compound Screen.</inlineHelpText>
        <label>Hide Next</label>
        <type>Checkbox</type>
    </fields>
    <label>Call Flow Screen</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACN_Screen_Number__c</columns>
        <columns>ACN_Layout_Column__c</columns>
        <columns>ACN_Stage_Sequence_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACN_Call_Flow_Template__c</field>
            <operation>equals</operation>
            <value>Abdominal Pain</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Flow Screen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACN_No_ScreenLogin_if_End_Screen_Checked</fullName>
        <active>false</active>
        <description>No Screen Login if End Screen Checked</description>
        <errorConditionFormula>AND(
OR(
NOT(ISBLANK( ACN_Screen_Logic__c )),
NOT(ISBLANK(  ACN_Default_Action_Screen__c ))
),
ACN_isEndScreen__c = TRUE
)</errorConditionFormula>
        <errorMessage>You cannot have &apos;Screen Logic&apos; and/or &apos;Default Screen&apos; populated for the final screen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACN_StageName_StageNo_NE_blank_viceversa</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
NOT(ISBLANK( ACN_Stage_Sequence_No__c )), 
ISBLANK( ACN_Stage_Name__c )
)
,
AND(
NOT(ISBLANK( ACN_Stage_Name__c )), 
ISBLANK( ACN_Stage_Sequence_No__c )
)
)</errorConditionFormula>
        <errorMessage>Fields &apos;Stage Sequence No&apos; or &apos;Stage Name&apos; cannot be blank</errorMessage>
    </validationRules>
</CustomObject>